@@ -3,7 +3,7 @@
  * Ruby Cairo Binding
  *
  * $Author: kou $
- * $Date: 2007-05-22 14:24:34 $
+ * $Date: 2008-06-12 10:59:54 $
  *
  * Copyright 2005 Øyvind Kolås <pippin@freedesktop.org>
  * Copyright 2004-2005 MenTaLguY <mental@rydia.com>
@@ -137,10 +137,10 @@ cr_solid_pattern_initialize (int argc, VALUE *argv, VALUE self)
     }
 
   if (n == 1 && rb_cairo__is_kind_of (red, rb_cArray) &&
-      (RARRAY (red)->len == 3 || RARRAY (red)->len == 4))
+      (RARRAY_LEN (red) == 3 || RARRAY_LEN (red) == 4))
     {
       VALUE ary = red;
-      n = RARRAY (ary)->len;
+      n = RARRAY_LEN (ary);
 
       red = rb_ary_entry (ary, 0);
       green = rb_ary_entry (ary, 1);
@@ -247,7 +247,7 @@ cr_gradient_pattern_add_color_stop_generic (int argc, VALUE *argv, VALUE self)
   if (n == 2 && rb_cairo__is_kind_of (red, rb_cArray))
     {
       VALUE ary = red;
-      n = RARRAY (ary)->len + 1;
+      n = RARRAY_LEN (ary) + 1;
 
       red = rb_ary_entry (ary, 0);
       green = rb_ary_entry (ary, 1);
